[gd_scene load_steps=12 format=3 uid="uid://bya4pcjawyft8"]

[ext_resource type="Script" path="res://scripts/main_scene_script/player_select_element.gd" id="1_oaeep"]
[ext_resource type="FontFile" uid="uid://dit7wdynyi70s" path="res://assets/fonts/Wizard.ttf" id="2_jhd2f"]
[ext_resource type="Theme" uid="uid://c4r65f6v0segr" path="res://assets/buttons/button_themes/fire_element_theme.tres" id="2_mqjqe"]
[ext_resource type="Theme" uid="uid://bh51vm44lfmjc" path="res://assets/buttons/button_themes/water_element_theme.tres" id="3_0fjs2"]
[ext_resource type="Theme" uid="uid://didb8racm1jor" path="res://assets/buttons/button_themes/earth_element_theme.tres" id="4_wid7a"]
[ext_resource type="Theme" uid="uid://ccx211ia2co1i" path="res://assets/buttons/button_themes/air_element_theme.tres" id="5_ugp25"]
[ext_resource type="Theme" uid="uid://ccvbfk6nmchkg" path="res://assets/buttons/button_themes/lightning_element_theme.tres" id="6_2j6cl"]
[ext_resource type="Theme" uid="uid://dn7iovuf0hv6i" path="res://assets/buttons/button_themes/nature_element_theme.tres" id="7_r4oln"]
[ext_resource type="Theme" uid="uid://7t637l60m20w" path="res://assets/buttons/button_themes/light_element_theme.tres" id="8_exh1e"]
[ext_resource type="Theme" uid="uid://5u0q0crcrd4b" path="res://assets/buttons/button_themes/dark_element_theme.tres" id="9_7pu2h"]

[sub_resource type="LabelSettings" id="LabelSettings_3sra3"]
font = ExtResource("2_jhd2f")
font_size = 80

[node name="Player_select_element" type="Control" node_paths=PackedStringArray("fire_button", "water_button", "earth_button", "air_button", "lightning_button", "nature_button", "light_button", "dark_button")]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_oaeep")
fire_button = NodePath("Fire")
water_button = NodePath("Water")
earth_button = NodePath("Earth")
air_button = NodePath("Air")
lightning_button = NodePath("Lightning")
nature_button = NodePath("Nature")
light_button = NodePath("Light")
dark_button = NodePath("Dark")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 616.0
offset_top = 63.0
offset_right = 1330.0
offset_bottom = 222.0
grow_horizontal = 2
grow_vertical = 2
text = "SELECT ELEMENT"
label_settings = SubResource("LabelSettings_3sra3")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Fire" type="Button" parent="."]
layout_mode = 0
offset_left = 382.0
offset_top = 324.0
offset_right = 641.0
offset_bottom = 600.0
theme = ExtResource("2_mqjqe")
text = "Fire
"
metadata/_edit_lock_ = true

[node name="Water" type="Button" parent="."]
layout_mode = 0
offset_left = 680.0
offset_top = 326.0
offset_right = 939.0
offset_bottom = 602.0
theme = ExtResource("3_0fjs2")
text = "Water"
metadata/_edit_lock_ = true

[node name="Earth" type="Button" parent="."]
layout_mode = 0
offset_left = 998.0
offset_top = 322.0
offset_right = 1257.0
offset_bottom = 598.0
theme = ExtResource("4_wid7a")
text = "Earth"
metadata/_edit_lock_ = true

[node name="Air" type="Button" parent="."]
layout_mode = 0
offset_left = 1295.0
offset_top = 320.0
offset_right = 1554.0
offset_bottom = 596.0
theme = ExtResource("5_ugp25")
text = "Air"
metadata/_edit_lock_ = true

[node name="Lightning" type="Button" parent="."]
layout_mode = 0
offset_left = 382.0
offset_top = 643.0
offset_right = 641.0
offset_bottom = 919.0
theme = ExtResource("6_2j6cl")
text = "Lightning"
metadata/_edit_lock_ = true

[node name="Nature" type="Button" parent="."]
layout_mode = 0
offset_left = 682.0
offset_top = 640.0
offset_right = 941.0
offset_bottom = 916.0
theme = ExtResource("7_r4oln")
text = "Nature"
metadata/_edit_lock_ = true

[node name="Light" type="Button" parent="."]
layout_mode = 0
offset_left = 999.0
offset_top = 640.0
offset_right = 1258.0
offset_bottom = 916.0
theme = ExtResource("8_exh1e")
text = "Light"
metadata/_edit_lock_ = true

[node name="Dark" type="Button" parent="."]
layout_mode = 0
offset_left = 1295.0
offset_top = 641.0
offset_right = 1554.0
offset_bottom = 917.0
theme = ExtResource("9_7pu2h")
text = "Dark"
metadata/_edit_lock_ = true

[connection signal="pressed" from="Fire" to="." method="_on_fire_pressed"]
[connection signal="pressed" from="Water" to="." method="_on_water_pressed"]
[connection signal="pressed" from="Earth" to="." method="_on_earth_pressed"]
[connection signal="pressed" from="Air" to="." method="_on_air_pressed"]
[connection signal="pressed" from="Lightning" to="." method="_on_lightning_pressed"]
[connection signal="pressed" from="Nature" to="." method="_on_nature_pressed"]
[connection signal="pressed" from="Light" to="." method="_on_light_pressed"]
[connection signal="pressed" from="Dark" to="." method="_on_dark_pressed"]
